src/objects/Zapier_Lead__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <label>Campaign Code</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <formula>TRIM(LEFT( MobileNo__c , 3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Sub_Source__c</fullName>
        <label>Lead Sub Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileNo__c</fullName>
        <label>MobileNo</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <formula>IF( Country_Code__c = &apos;+91&apos;, TRIM(RIGHT( MobileNo__c , 10)), MobileNo__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Zapier Leads</relationshipLabel>
        <relationshipName>Zapier_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Zapier Lead</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Zapier Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zapier Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>